Update to 0.4.0 and to more recent standards

--- a/debian/rules
+++ b/debian/rules
@@ -2,3 +2,6 @@
 
 %:
 	dh $@ --parallel --with kde --dbg-package=libktpcommoninternalsprivate-dbg --list-missing
+
+override_dh_makeshlibs:
+	dh_makeshlibs -V
