--- a/KTp/CMakeLists.txt
+++ b/KTp/CMakeLists.txt
@@ -10,7 +10,9 @@ set (ktp_common_internals_private_SRCS
      service-availability-checker.cpp
      telepathy-handler-application.cpp
      text-parser.cpp
+     pending-wallet.cpp
      wallet-interface.cpp
+     wallet-utils.cpp
 )
 
 set (ktp_common_internals_private_HDRS
@@ -22,8 +24,9 @@ set (ktp_common_internals_private_HDRS
      service-availability-checker.h
      telepathy-handler-application.h
      text-parser.h
+     pending-wallet.h
      wallet-interface.h
-
+     wallet-utils.h
      ktp-export.h
 )
 
