Imported Upstream version 0.5.3

--- a/tools/debugger/CMakeLists.txt
+++ b/tools/debugger/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(
 
 set(ktp-debugger_SRCS
     main-window.cpp
-    debug-messages-model.cpp
+    debug-message-view.cpp
     main.cpp
 )
 
