--- a/KTp/Models/CMakeLists.txt
+++ b/KTp/Models/CMakeLists.txt
@@ -4,6 +4,7 @@ include_directories (${CMAKE_CURRENT_BINARY_DIR}
 )
 
 set (ktp_models_private_SRCS
+    ${KTP_GLOBAL_SOURCES}
     abstract-grouping-proxy-model.cpp
     accounts-list-model.cpp
     accounts-tree-proxy-model.cpp
