Update libktpcommoninteralsprivate soversion to 5
* Update libktpcommoninteralsprivate soversion to 5
* Install qml components

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-extras/kde-telepath
 Package: libktpcommoninternalsprivate-dev
 Section: libdevel
 Architecture: any
-Depends: libktpcommoninternalsprivate1 (= ${binary:Version}), ${misc:Depends}
+Depends: libktpcommoninternalsprivate5 (= ${binary:Version}), ${misc:Depends}
 Description: KDE Telepathy internal library - Development headers
  Internal library which consits of the most reused
  parts across KDE Telepathy.
@@ -24,9 +24,11 @@ Description: KDE Telepathy internal library - Development headers
  outside of the KDE Telepathy project umbrella. This package
  is only provided for compiling the rest of the components.
 
-Package: libktpcommoninternalsprivate1
+Package: libktpcommoninternalsprivate5
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Replaces: libktpcommoninternalsprivate1
+Breaks: libktpcommoninternalsprivate1
 Description: KDE Telepathy internal library
  Internal library which consits of the most reused
  parts across KDE Telepathy.
@@ -42,7 +44,7 @@ Package: libktpcommoninternalsprivate-dbg
 Architecture: any
 Section: debug
 Priority: extra
-Depends: libktpcommoninternalsprivate1 (= ${binary:Version}), ${misc:Depends}
+Depends: libktpcommoninternalsprivate5 (= ${binary:Version}), ${misc:Depends}
 Description: KDE Telepathy internal library - debug symbols
  Internal library which consits of the most reused
  parts across KDE Telepathy.
