--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ktp-common-internals
 Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: Diane Trout <diane@ghic.org>, Michał Zając <quintasan@kubuntu.org>
-Build-Depends: debhelper (>= 9), cmake, libtelepathy-qt4-dev (>= 0.9.3), libtelepathy-logger-qt4-dev, libtelepathy-logger-dev, pkg-kde-tools, kdelibs5-dev
+Build-Depends: debhelper (>= 9), cmake, libtelepathy-qt4-dev (>= 0.9.3), libtelepathy-logger-qt4-dev (>= 0.6.0), libtelepathy-logger-dev, pkg-kde-tools, kdelibs5-dev
 Standards-Version: 3.9.3
 Section: libs
 Homepage: https://projects.kde.org/projects/extragear/network/telepathy/ktp-common-internals
