--- a/debian/control
+++ b/debian/control
@@ -58,3 +58,6 @@ Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Debugging tool for KDE Telepathy
  This package contains a GUI debugging tool which can be used to debug
  issues in Telepathy.
+ .
+ It will show the debugging messages from the various telepathy 
+ components.
