--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,4 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@ --parallel --with kde --dbg-package=libktpcommoninternalsprivate-dbg --list-missing
-
-override_dh_makeshlibs:
-	dh_makeshlibs -V
+	dh $@ --parallel --with kde --buildsystem kde --dbg-package=libktpcommoninternalsprivate-dbg --list-missing
