--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,12 @@ Source: ktp-common-internals
 Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: Diane Trout <diane@ghic.org>, Michał Zając <quintasan@kubuntu.org>, Mark Purcell <msp@debian.org>
-Build-Depends: debhelper (>= 9), cmake, libtelepathy-qt4-dev (>= 0.9.3), libtelepathy-logger-qt4-dev (>= 0.6.0), libtelepathy-logger-dev, pkg-kde-tools, kdelibs5-dev
+Build-Depends: debhelper (>= 9), cmake,
+ libtelepathy-qt4-dev (>= 0.9.3), libtelepathy-logger-qt4-dev (>= 0.6.0),
+ libtelepathy-logger-dev,
+ pkg-kde-tools, kdelibs5-dev,
+ nepomuk-core-dev, shared-desktop-ontologies,
+ libkpeople-dev,
 Standards-Version: 3.9.4
 Section: libs
 Homepage: https://projects.kde.org/projects/extragear/network/telepathy/ktp-common-internals
@@ -12,7 +17,7 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-extras/kde-telepath
 Package: libktpcommoninternalsprivate-dev
 Section: libdevel
 Architecture: any
-Depends: libktpcommoninternalsprivate5 (= ${binary:Version}), ${misc:Depends}
+Depends: libktpcommoninternalsprivate6 (= ${binary:Version}), ${misc:Depends}
 Description: KDE Telepathy internal library - Development headers
  Internal library which consits of the most reused
  parts across KDE Telepathy.
@@ -24,7 +29,7 @@ Description: KDE Telepathy internal library - Development headers
  outside of the KDE Telepathy project umbrella. This package
  is only provided for compiling the rest of the components.
 
-Package: libktpcommoninternalsprivate5
+Package: libktpcommoninternalsprivate6
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: KDE Telepathy internal library
@@ -52,7 +57,7 @@ Package: libktpcommoninternalsprivate-dbg
 Architecture: any
 Section: debug
 Priority: extra
-Depends: libktpcommoninternalsprivate5 (= ${binary:Version}), ${misc:Depends}
+Depends: libktpcommoninternalsprivate6 (= ${binary:Version}), ${misc:Depends}
 Description: KDE Telepathy internal library - debug symbols
  Internal library which consits of the most reused
  parts across KDE Telepathy.
