--- a/KTp/Logger/ktp_logger_plugin.desktop
+++ b/KTp/Logger/ktp_logger_plugin.desktop
@@ -2,17 +2,23 @@
 Type=ServiceType
 X-KDE-ServiceType=KTpLogger/Plugin
 Comment=KTp Logger Plugin
+Comment[bs]=KTp dnevnički dodatak
 Comment[ca]=Connector de registre del KTp
+Comment[ca@valencia]=Connector de registre del KTp
 Comment[cs]=Modul záznamů KTp
 Comment[da]=KTp-logger-plugin
+Comment[de]=KTp-Protokollmodul
 Comment[es]=Complemento de gestor de registro de KTp
 Comment[fi]=KTp-lokitusliitännäinen
 Comment[fr]=Module externe de journalisation de KTp
+Comment[hu]=KTp naplózó bővítmény
+Comment[ia]=Plugin de KTp Logger
 Comment[it]=Estensione di registro di KTp
-Comment[nb]=Programtillegg for KTp-logger
+Comment[kk]=KTp журналын жүргізу плагині
 Comment[nl]=KTp Logger-plug-in
 Comment[pt]='Plugin' de Registo do KTp
 Comment[pt_BR]=Plugin de registro do KTp
+Comment[ru]=Модуль ведения журналов KTp
 Comment[sk]=Plugin KTp záznam
 Comment[sl]=Vstavek za beleženje KTp
 Comment[sr]=Прикључак бележника
@@ -20,8 +26,10 @@ Comment[sr@ijekavian]=Прикључак бележника
 Comment[sr@ijekavianlatin]=Priključak beležnika
 Comment[sr@latin]=Priključak beležnika
 Comment[sv]=KTp-loggningsinsticksprogram
+Comment[tr]=KTp Günlükleme Eklentisi
 Comment[uk]=Додаток ведення журналу KTp
 Comment[x-test]=xxKTp Logger Pluginxx
+Comment[zh_CN]=KTp 日志插件
 Comment[zh_TW]=KTp 紀錄器外掛程式
 
 # The ktp-text-ui plugin framework version for which the plugin is written
