Imported Upstream version 0.8.1

--- a/KTp/Logger/ktp_logger_plugin.desktop
+++ b/KTp/Logger/ktp_logger_plugin.desktop
@@ -2,12 +2,13 @@
 Type=ServiceType
 X-KDE-ServiceType=KTpLogger/Plugin
 Comment=KTp Logger Plugin
-Comment[bs]=KTp dnevnički priključak
+Comment[bs]=KTp dnevnički dodatak
 Comment[ca]=Connector de registre del KTp
 Comment[ca@valencia]=Connector de registre del KTp
 Comment[cs]=Modul záznamů KTp
 Comment[da]=KTp-logger-plugin
 Comment[de]=KTp-Protokollmodul
+Comment[el]=Πρόσθετο καταγραφέα KTp
 Comment[es]=Complemento de gestor de registro de KTp
 Comment[fi]=KTp-lokitusliitännäinen
 Comment[fr]=Module externe de journalisation de KTp
@@ -16,6 +17,7 @@ Comment[hu]=KTp naplózó bővítmény
 Comment[ia]=Plugin de KTp Logger
 Comment[it]=Estensione di registro di KTp
 Comment[kk]=KTp журналын жүргізу плагині
+Comment[ko]=KTp 기록 플러그인
 Comment[nb]=Programtillegg for KTp-logger
 Comment[nl]=KTp Logger-plug-in
 Comment[pl]=Wtyczka dziennika KTp
