Update kde-telepathy-kpeople description.
Conflicts:
	debian/changelog

--- a/debian/control
+++ b/debian/control
@@ -103,12 +103,10 @@ Description: KDE Telepathy internal library - debug symbols
 Package: kde-telepathy-kpeople
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: meta-contact support for kde-telepathy
+Description: kpeople plugins for kde-telepathy
  This allows grouping multiple IM accounts into meta-contacts.
  .
- This contains the nepomuk storage server and supporting plugins.
- If you don't have this installed ktp-contact-list will default
- to classic mode.
+ This contains plugins to work with libkpeople.
 
 Package: kde-telepathy-debugger
 Architecture: any
