--- a/debian/control
+++ b/debian/control
@@ -47,7 +47,7 @@ Description: KDE Telepathy common internal library
  Internal library which consists of the most reused
  parts across KDE Telepathy.
  .
- This contians the generic common components.
+ This contains the generic common components.
 
 Package: libktpmodelsprivate8
 Architecture: any
