--- a/debian/control
+++ b/debian/control
@@ -24,6 +24,7 @@ Architecture: any
 Depends: libktpcommoninternalsprivate8 (= ${binary:Version}),
  libktpwidgetsprivate8 (= ${binary:Version}),
  libktploggerprivate8 (= ${binary:Version}),
+ libktpotrprivate8 (= ${binary:Version}),
  ${misc:Depends}
 Description: KDE Telepathy internal library - Development headers
  Internal library which consists of the most reused
