--- a/otr-proxy/CMakeLists.txt
+++ b/otr-proxy/CMakeLists.txt
@@ -3,4 +3,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(KTpProxy)
 add_subdirectory(data)
+if (KDE4_BUILD_TESTS)
 add_subdirectory(test)
+endif ()
