--- a/debian/control
+++ b/debian/control
@@ -42,8 +42,7 @@ Replaces: libktpcommoninternalsprivate6 (<< 0.7.80)
 Breaks: libktpcommoninternalsprivate6 (<< 0.7.80)
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libkpeople4 (>= 0.3.0),
- libtelepathy-logger-qt4-1 (>= 0.8.0),
- kde-telepathy-kpeople
+ libtelepathy-logger-qt4-1 (>= 0.8.0)
 Description: KDE Telepathy common internal library
  Internal library which consists of the most reused
  parts across KDE Telepathy.
