--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,8 @@
 #!/usr/bin/make -f
 
-%:
-	dh $@ --parallel --with kde --dbg-package=libktpcommoninternalsprivate-dbg --list-missing
+include /usr/share/pkg-kde-tools/qt-kde-team/3/debian-qt-kde.mk
 
-override_dh_auto_test:
+override_dh_strip:
+	$(overridden_command) --dbg-package=libktp-dbg
 
 .PHONY: override_dh_auto_test
