--- a/debian/control
+++ b/debian/control
@@ -41,7 +41,7 @@ Build-Depends: cmake,
                libkf5windowsystem-dev,
                libkf5xmlgui-dev,
                libotr5-dev,
-               libtelepathy-logger-qt5-dev,
+               libtelepathy-logger-qt-dev (>= 0.9.80),
                libtelepathy-qt5-dev,
                pkg-kde-tools (>> 0.15.15),
                qtbase5-dev,
