--- a/debian/control
+++ b/debian/control
@@ -112,19 +112,10 @@ Description: KDE Telepathy internal logger library
 Package: libktpotr9
 Architecture: any
 Depends: ktp-proxy (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
+Breaks: ktp-proxy (<= ${source:Version}), libktpotrprivate8 (<< 15.03.80)
+Replaces: ktp-proxy (<= ${source:Version}), libktpotrprivate8 (<< 15.03.80)
 Description: KDE Telepathy internal OTR library
  Internal library which consists of the most reused
- parts across KDE Telepathy.
- .
- This includes components to support OTR
-
-Package: ktp-proxy
-Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libktpotrprivate8 (<< 15.03.80)
-Replaces: libktpotrprivate8 (<< 15.03.80)
-Description: KDE Telepathy internal OTR helper
- Internal helper which consists of the most reused
  parts across KDE Telepathy.
  .
  This includes components to support OTR
