fix random things

--- a/debian/control
+++ b/debian/control
@@ -102,9 +102,7 @@ Description: KDE Telepathy common internal widgets library
 
 Package: libktplogger9
 Architecture: any
-Depends: kde-telepathy-data (= ${binary:Version}),
-         ${misc:Depends},
-         ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: KDE Telepathy internal logger library
  Internal library which consists of the most reused
  parts across KDE Telepathy.
@@ -113,7 +111,7 @@ Description: KDE Telepathy internal logger library
 
 Package: libktpotr9
 Architecture: any
-Depends: ktp-proxy (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Breaks: ktp-proxy (<= ${source:Version}), libktpotrprivate8 (<< 15.03.80)
 Replaces: ktp-proxy (<= ${source:Version}), libktpotrprivate8 (<< 15.03.80)
 Description: KDE Telepathy internal OTR library
